--- a/package.json
+++ b/package.json
@@ -1,20 +1,38 @@
 {
-  "name": "apollo-school",
+  "name": "address-book",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "Simple React app to keep track of contact addresses.",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "seed": "node seeds/seed.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andycwilliams/Address-Book.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/andycwilliams/Address-Book/issues"
+  },
+  "homepage": "https://github.com/andycwilliams/Address-Book#readme",
   "dependencies": {
-    "apollo-server-express": "^2.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.6",
-    "graphql": "^15.5.1"
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.0.8"
   }
 }
